--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.21.0
   firebase_database: ^10.3.3
+  url_launcher: ^6.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
