--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^2.21.0
   firebase_database: ^10.3.3
   url_launcher: ^6.2.2
+  provider: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
